--- a/css/style-1.css
+++ b/css/style-1.css
@@ -262,7 +262,8 @@ header .navbar-nav .nav-item.dropdown .dropdown-menu li a span:hover {
 .creative-section {
     position: relative;
     background-color: #f8714c;
-    padding: 80px 0;
+    padding: 20px 20px 40px 40px;
+    color: #ffffff;
 }
 
 .creative-section::before,
@@ -659,4 +660,21 @@ h1 {
     border-color: #007bff;
 }
 
-
+/* loading overlay */
+.loading-overlay{
+    position: fixed;
+  display: none;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(255, 255, 255, 0.9);
+  z-index: 2;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
