--- a/css/style-1.css
+++ b/css/style-1.css
@@ -14,15 +14,32 @@ p {
     line-height: 28px; 
 }
 
-.btn-primary{
-    background: #f8714c;
-    color: #f1f1f1;
+.card{
     border: none;
 }
 
+.btn-primary{
+    color: #f8714c;
+    background: #ffffff;
+    border: 2px solid #f8714c;
+}
+
 .btn-primary:hover{
-    /* background: #804cf8; */
-    background: #6c757d;
+    color: #f1f1f1;
+    background: #f8714c;
+    border: 2px solid #f8714c;
+
+}
+
+.btn-secondry{
+    color: #f1f1f1;
+    border: 2px solid #f1f1f1;
+}
+
+.btn-secondry:hover{
+    color: #f8714c;
+    background: #f1f1f1;
+    border: 2px solid #f8714c;
 }
 
 body {
@@ -174,30 +191,25 @@ header .navbar-nav .nav-item.dropdown .dropdown-menu li a span:hover {
 }
 
 .carousel-inner{
+    position: relative;
     width:100%;
     height:100%;
 }
 
 .carousel-caption{
+    position: absolute;
     text-align: left;
 }
 
 .carousel-caption h5{
-    /* font-size: 4.7rem; */
     font-size: 6vw;
-    bottom: 1rem;
-    padding-top: 1rem;
-    padding-bottom: 1.5rem;
 }
 
 .carousel-caption p{
     color: #f8714c;
     font-weight: 600;
-    font-size: 1.25rem;
-    bottom: 1rem;
-    padding-top: 0.25rem;
-    padding-bottom: 1rem;
 }
+
 
 /* Main Content */
 .heading {
@@ -299,17 +311,190 @@ header .navbar-nav .nav-item.dropdown .dropdown-menu li a span:hover {
     margin-bottom: 30px;
 }
 
+
+/* News */
 .news-section {
-    padding-top: 0px;
-    /* padding: 50px 0;  */
+    display: flex;
+    justify-content: center;
+    padding: 40px 0px 20px 0px;
+}
+
+.events{
+    text-align: center;
+}
+
+.events-row{
+    padding: 40px 0px 20px 0px;
+    text-align: start;
+}
+.card-footer{
+    display: flex;
+    justify-content: end;
+    background-color: #ffffff;
+    border: none;
+}
+.news-card-text {
+    display: flex;
+    justify-content: space-between;
+    background-color: #ffffff;
+    padding: 10px 15px;
+    margin-bottom: 0;
+    border-radius: 5px;
+    transition: box-shadow 0.3s ease;
+}
+
+.news-card-text a {
+    color: #333;
+    font-weight: bold;
+    text-decoration: none;
+    transition: color 0.3s ease; 
+}
+
+.news-card-text a:hover {
+    color: #f8714c;
+}
+
+.news-text-body-secondary {
+    color: #6c757d;
+    font-size: 14px;
+}
+
+/* Recent actiities */
+
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 20px;
+    padding: 20px;
+}
+
+/* Gallery item */
+.gallery-item {
+    position: relative;
+    overflow: hidden;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
+}
+
+/* Image within gallery item */
+.gallery-item img {
+    width: 100%;
+    height: auto;
+    display: block;
+    border-radius: 10px;
+    transition: transform 0.3s ease;
+}
+
+/* Image hover effect */
+.gallery-item:hover {
+    transform: scale(1.05);
+}
+
+/* Text overlay */
+.text-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.6);
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+/* Text overlay content */
+.text-overlay-content {
+    text-align: center;
+    color: #fff;
+    padding: 20px;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+/* Show text overlay on hover */
+.gallery-item:hover .text-overlay {
+    opacity: 1;
+}
+
+.gallery-item:hover .text-overlay-content {
+    opacity: 1;
+}
+
+/* Container for achievements */
+.achievements-section{
+    background: #f8714c;
+    padding: 40px 0 40px 0;
+    /* padding: 20px 80px 40px 80px; */
+}
+
+.achievements-section-heading{
+    color: #fff;
+    text-align: center;
+    font-size: 1.75rem;
+    font-weight: 700;
+    margin-top: 2.5rem !important; 
+    margin-bottom: 2.5rem !important; 
+}
+.achievements-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+}
+
+/* Individual achievement card */
+.achievement-card {
+    width: 300px;
+    border: 1px solid #fff; /* White border */
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
+    background-color: #fff; /* White background */
+}
+
+/* Image within the card */
+.achievement-card img {
+    width: 100%;
+    height: auto;
+    display: block;
+    border-bottom: 1px solid #ddd;
+}
+
+/* Text content */
+.achievement-card .text-content {
+    padding: 20px;
+}
+
+/* Title */
+.achievement-card h3 {
+    margin-top: 0;
+    font-size: 20px;
+    color: #333;
+}
+
+/* Description */
+.achievement-card p {
+    color: #666;
+}
+
+/* Hover effect */
+.achievement-card:hover {
+    transform: translateY(-5px);
 }
 
 
+
+
+/* Footer */
 .contact i{
     margin-right: 5px;
 }
 
-/* Footer */
 footer {
     border-top: 1px solid rgba(0, 0, 0, 0.05) !important;
     color: #999;
@@ -352,10 +537,11 @@ footer ul li {
 footer ul li:first-child {
     margin-bottom: 0.5rem;
     font-weight: 600;
+    color: #bfbfbf;
 }
 
 footer ul li a {
-    color: #d0d6e6;
+    color: #fff;
     font-size: 0.85rem;
     padding: 0.4rem 0;
     display: inline-block;
@@ -378,16 +564,18 @@ footer .powered-by img {
 }
 
 footer .navbar-brand {
-    padding-left: 0px;
-    padding-bottom: 1%;
+    padding: 80px 0;
+}
+
+footer address{
+    margin-top: 20px;
 }
 
 footer .em-txt{
+    display: inline;
     color: #fff;
-    font-size: 1.25rem;
-    overflow-wrap: break-word;
-    margin-bottom: 1%;
-
+    font-size: 1.75vw;
+    margin-bottom: 20px;
 }
 
 footer .navbar-brand img{
@@ -618,6 +806,17 @@ h1 {
     .event-card {
         margin-bottom: 20px;
     }
+    .carousel-caption{
+        transform: translate(0%, 30%);
+    }
+    .carousel-caption p{
+        transform: translate(0%, -5%);
+    }
+    footer .em-txt{
+        display: inline;
+        color: #fff;
+        font-size: 0.75rem;
+    }
 }
 
 
@@ -678,3 +877,17 @@ h1 {
   align-items: center;
   text-align: center;
 }
+
+
+
+.section-title {
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.activities-section {
+    padding: 80px 0;
+}
+
+
+
