--- a/css/style-1.css
+++ b/css/style-1.css
@@ -380,6 +380,20 @@ select {
     padding: 40px 0px 20px 0px;
     text-align: start;
 }
+
+.event-card img{
+    width: 100%;
+    height: 150px;
+}
+
+.event-card .card-body h5{
+    font-size: medium;
+}
+
+.card-body .event_date{
+    color: #f8714c;
+}
+
 .card-footer{
     display: flex;
     justify-content: end;
