--- a/css/style-1.css
+++ b/css/style-1.css
@@ -377,20 +377,29 @@ select {
 }
 
 .events-row{
-    padding: 40px 0px 20px 0px;
     text-align: start;
 }
 
-.event-card img{
+#latestEvents .event-gallery-item img{
     width: 100%;
-    height: 150px;
+    height: 250px;
 }
 
-.event-card .card-body h5{
+.event-gallery-item .text-box{
+    position: absolute;
+    width: 100%;
+    height: auto;
+    bottom: 0;
+    padding: 10px;
+    background: rgba(1, 1, 1, 0.5);
+}
+
+.event-gallery-item h5{
+    color: #ffffff;
     font-size: medium;
 }
 
-.card-body .event_date{
+.event-date{
     color: #f8714c;
 }
 
