--- a/css/style-1.css
+++ b/css/style-1.css
@@ -745,6 +745,8 @@ h1 {
     text-align: center;
 }
 
+/* profile */
+
 .profile {
     display: flex;
     margin-bottom: 20px;
@@ -766,6 +768,84 @@ h1 {
 .info h2 {
     margin-top: 0;
     margin-bottom: 10px;
+}
+
+/* Faculty Profile */
+
+.faculty-profile-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    position: relative;
+    min-height: 100vh;
+}
+
+.faculty-profile-card {
+    position: relative;
+    background: #fff;
+    max-width: 320px;
+    margin: 15px;
+    text-align: center;
+    overflow: hidden;
+    border: 1px solid #dee2e6;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease-in-out;
+}
+
+.faculty-profile-card img {
+    width: 100%;
+    height: 280px;
+    object-fit: cover;
+}
+
+.faculty-profile-card .card-title {
+    width: 80%;
+    /* color: #f8714c; */
+    background: #ffffff;
+    padding: 10px 15px;
+    border: 2px solid #fff;
+    border-radius: 10px;
+    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.2);
+    position: absolute;
+    top: 260px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
+    font-size: 1.1rem;
+    font-weight: 600;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.faculty-profile-card .card-body {
+    padding: 20px;
+    padding-top: 80px;
+}
+
+.designation{
+    color: #f8714c;
+}
+
+.faculty-profile-card .social-icons {
+    margin-top: 10px;
+    border-top: 2px solid #f8714c;
+    text-align: start;
+    padding: 5px 2px;
+}
+
+.faculty-profile-card .social-icons a {
+    color: #555;
+    margin: 0 10px;
+    font-size: 1rem;
+    text-decoration: none;
+    transition: color 0.2s;
+}
+
+.faculty-profile-card .social-icons a:hover {
+    color: #f8714c;
 }
 
 @media (max-width: 600px) {
