--- a/css/styles.css
+++ b/css/styles.css
@@ -193,68 +193,21 @@ header .navbar-nav .nav-item.dropdown .dropdown-menu li a span:hover {
 .news-section {
     position: relative;
     width: 100%;
-    padding: 80px 40px;
-    background-color: #ffffff;
-    /* background: linear-gradient(160deg, #f8714c, #ffba6c); */
+    padding: 40px;
 }
-
-.lineheading {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 10px;
-    position: relative;
-}
-
-.lineheading::after{
-    content: "";
-    display: block;
-    width: 100%;
-    height: 2px;
-    background: #f8714c;
-    top: 50%;
-    position: absolute;
-    z-index: 1;
-}
-
-.lineheading p {
-    font-size: 24px;
-    font-weight: bold;
-    color: #333;
-    margin: 0;
-    /* padding: 0 10px; */
-    background-color: #ffffff;
-    z-index: 2;
-}
-
-.btn-short {
-    background-color: #f8714c;
-    color: #fff;
-    border: none;
-    padding: 5px 10px;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-    z-index: 2;
-    position: relative;
-}
-
-.btn-short:hover {
-    background-color: #d45b39;
-}
-
-.line {
-    width: 100%;
-    height: 2px;
-    background-color: #eee;
-    margin-bottom: 20px;
-}
-
 .events-row {
-    width: 100%;
-    height: auto;
-    padding: 10px 0;
-    text-align: start;
-    margin-bottom: 40px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    justify-content: center;
+    align-items: center;
+}
+
+.list-group-item {
+    min-width: 340px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 10px;
+    transition: transform 0.3s ease;
 }
 
 .news {
@@ -265,7 +218,7 @@ header .navbar-nav .nav-item.dropdown .dropdown-menu li a span:hover {
 
 .news-card {
     width: 100%;
-    height: 258px;
+    height: 280px;
     border: 1px solid #eee;
     overflow: hidden;
 }
@@ -341,73 +294,351 @@ header .navbar-nav .nav-item.dropdown .dropdown-menu li a span:hover {
     flex-grow: 1;
 }
 
-.section {
+/* Acheivement Section */
+.achievements-section{
+    /* background-color: rgb(248, 113, 76, 0.1); */
+    /* background: linear-gradient(160deg, #f8714c, #ffba6c); */
+    padding: 40px;
+    /* clip-path: polygon(0 0, 0 0,0 100%, 100% 100%, 100% 50px); */
+}
+
+.slider-container {
+    position: relative; 
+    width:100%;
+    overflow: hidden;
+}
+.slider-track {
+    display: flex;
+    animation: scroll 20s linear 1s infinite;
+}
+.slider-track .card {
+    min-width: 300px;
+    margin: 0 1px;
+    border: none;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
+    overflow: hidden;
+}
+.slider-track .card:hover {
+    max-width: 360px;
+}
+.slider-track .card:not(:hover) {
+    max-width: 300px;
+}
+.slider-track .card img {
+    height: 280px;
+    width: 400px;
+    object-fit: cover;
+    transition: transform 0.3s ease;
+}  
+.slider-track .card:hover img {
+    transform: scale(1.1);
+}
+.slider-track .card-img-overlay {
+    background: rgba(0, 0, 0, 0.6);
+}
+.slider-track .text-container{
+    position: absolute;
+    top: auto;
+    bottom: 0px;
+    padding: 20px;
+    left: 0;
+    background: rgb(248, 113, 76, 0.3);
+}
+.slider-track .card-title {
+    color: #f8714c;
+    font-size: 1.25rem;
+    font-weight: bold;
+}
+.slider-track .card-text {
+    font-size: 1rem;
+    /* color: #6c757d; */
+}
+.slider-track > div {
+    display: flex;
+}
+@keyframes scroll {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(calc(-100% + 300px));
+        left: 0px;
+    }
+}
+
+/* Recent actiities */
+
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 20px;
+    padding: 20px;
+}
+
+/* Gallery item */
+.gallery-item {
+    position: relative;
+    overflow: hidden;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
+}
+
+/* Image within gallery item */
+.gallery-item img {
+    width: 100%;
+    height: auto;
+    display: block;
+    border-radius: 10px;
+    transition: transform 0.3s ease;
+}
+
+/* Image hover effect */
+.gallery-item:hover {
+    transform: scale(1.05);
+}
+
+/* Text overlay */
+.text-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    margin-bottom: 40px;
-    padding: 80px 40px;
-    background: rgb(248, 113, 76, 0.1);
+    background-color: rgba(0, 0, 0, 0.6);
+    opacity: 0;
+    transition: opacity 0.3s ease;
 }
 
-  .image {
-    flex: 1;
-    max-width: 50%;
+/* Text overlay content */
+.text-overlay-content {
+    text-align: center;
+    color: #fff;
     padding: 20px;
-  }
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
 
-  .image img {
-    width: 100%;
-    border-radius: 10px;
-  }
+/* Show text overlay on hover */
+.gallery-item:hover .text-overlay {
+    opacity: 1;
+}
 
-  .content {
-    flex: 1;
-    max-width: 50%;
-    padding: 20px;
-  }
+.gallery-item:hover .text-overlay-content {
+    opacity: 1;
+}
 
-  .content h1 {
+/* events-section */
+
+.events-section{
+    padding: 0px 80px;
+}
+
+
+
+/* Footer */
+footer {
+    border-top: 1px solid rgba(0, 0, 0, 0.05) !important;
+    color: #999;
+    margin-bottom: 0px;
+    background-color: #171e27;
+    padding: 80px 0;
+}
+
+footer address {
+    line-height: 1.5rem;
+    color: #ffffff;
+    margin-top: 40px;
+}
+
+footer address .contact {
+    display: block;
+    line-height: 1.75rem; 
+    margin: 60px 0 0 0;
+}
+
+footer address .contact i {
     color: #f8714c;
-    font-size: 24px;
-    margin-bottom: 20px;
-  }
+    margin-right: 0.25rem; 
+}
 
-  .content p {
-    font-size: 16px;
-    line-height: 1.6;
-    margin-bottom: 20px;
-  }
+footer address p {
+    margin-top: 1rem;
+}
 
-  .content a {
+footer ul {
+    margin: 60px 0;
+    padding: 0; 
+}
+
+footer ul li {
+    list-style: none;
+    color: #fff;
+    font-size: 1rem;
+}
+
+footer ul li:first-child {
+    margin-bottom: 10px;
+    font-size: 18px;
+    font-weight: 600;
+    color: #bfbfbf;
+}
+
+footer ul li a {
+    color: #fff;
+    font-size: 0.85rem;
+    padding: 0.4rem 0;
     display: inline-block;
-    padding: 10px 20px;
+    text-decoration: none;
+}
+
+footer ul li a:hover {
+    border-radius: 4px;
+    color: #f8714c;
+    text-decoration: none;
+}
+
+footer .powered-by {
+    font-size: 10px;
+    color: #d0d6e6;
+}
+
+footer .powered-by img {
+    width: 65px; 
+}
+
+footer address{
+    margin-top: 20px;
+}
+
+footer .em-txt{
+    display: inline;
+    color: #fff;
+    font-size: 18px;
+}
+
+footer .navbar-brand img{
+    width: 50px;
+}
+
+.social-links{
+    display: flex;
+    justify-content: center;
+    bottom: 40px;
+    width: 100%;
+    padding: 20px;
+}
+
+.social-links a{
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    margin-right: 10px;
+    background: transparent;
+    font-size: 20px;
+    text-decoration: none;
+    color: #ffffff;
+    z-index: 1;
+    overflow: hidden;
+    transition: .5s;
+}
+
+.social-links a:hover{
+    color: #f8714c;
+    border: 1px solid #ffffff;
+    border-radius: 50%;
+}
+  
+
+  
+
+  
+/* Common */
+
+/* Headings */
+.heading {
+    text-align: center;
+    font-size: 1.75rem;
+    font-weight: 700;
+    margin-bottom: 18px;
+}
+
+.heading span {
+    position: relative; 
+}
+
+.heading span::after {
+    background: #f8714c;
+    width: 60px;
+    height: 6px;
+    display: inline-block;
+    content: "";
+    position: absolute;
+    border-radius: 0%;
+    z-index: -1;
+    top: 36px;
+    left: 2px;
+    padding-bottom: 5px;
+}
+
+.lineheading {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    margin-bottom: 40px;
+}
+
+.lineheading::after{
+    content: "";
+    display: block;
+    width: 100%;
+    height: 2.25px;
+    background: #f8714c;
+    top: 50%;
+    position: absolute;
+    z-index: 1;
+}
+
+.lineheading p {
+    font-size: 24px;
+    font-weight: bold;
+    color: #333;
+    margin: 0;
+    /* padding: 0 10px; */
+    background-color: #ffffff;
+    z-index: 2;
+}
+
+.line {
+    width: 100%;
+    height: 2px;
+    background-color: #eee;
+    margin-bottom: 20px;
+}
+
+/* Buttons */
+.btn-short {
     background-color: #f8714c;
     color: #fff;
-    text-decoration: none;
+    border: none;
+    padding: 5px 10px;
     border-radius: 5px;
     transition: background-color 0.3s ease;
-  }
+    z-index: 2;
+    position: relative;
+}
 
-  .content a:hover {
+.btn-short:hover {
     background-color: #d45b39;
-  }
-
-  @media (max-width: 768px) {
-    .section {
-      flex-direction: column;
-      text-align: center;
-    }
-
-    .image, .content {
-      max-width: 100%;
-    }
-  }
-
-
-
-
+}
 
 /* loading overlay */
 .loading-overlay{
