--- a/css/styles.css
+++ b/css/styles.css
@@ -193,20 +193,23 @@ header .navbar-nav .nav-item.dropdown .dropdown-menu li a span:hover {
 .news-section {
     position: relative;
     width: 100%;
-    padding: 40px;
+    padding: 80px 0 80px 0;
 }
+
 .events-row {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    max-height: 280px;
+    /* display: grid; */
+    /* grid-template-columns: repeat(auto-fit, minmax(400px, 1fr)); */
     justify-content: center;
     align-items: center;
+    overflow: auto;
 }
 
 .list-group-item {
-    min-width: 340px;
+    min-width: 240px;
+    width: 100%;
     position: relative;
     overflow: hidden;
-    border-radius: 10px;
     transition: transform 0.3s ease;
 }
 
@@ -220,6 +223,7 @@ header .navbar-nav .nav-item.dropdown .dropdown-menu li a span:hover {
     width: 100%;
     height: 280px;
     border: 1px solid #eee;
+    border-radius: 20px;
     overflow: hidden;
 }
 
@@ -272,12 +276,16 @@ header .navbar-nav .nav-item.dropdown .dropdown-menu li a span:hover {
 }
 
 .date {
-    background-color: #f8714c;
-    color: #fff;
+    width: 92px;
+    height: 92px;
+    background-color: #fff;
+    color: #f8714c;
     border-radius: 5px;
-    padding: 10px;
+    padding: 15 0px;
     text-align: center;
     margin-right: 10px;
+    border: 1px solid #eee;
+    border-radius: 20px;
 }
 
 .day {
@@ -296,9 +304,11 @@ header .navbar-nav .nav-item.dropdown .dropdown-menu li a span:hover {
 
 /* Acheivement Section */
 .achievements-section{
-    /* background-color: rgb(248, 113, 76, 0.1); */
+    padding: 40px 0 80px 0;
+    background: rgb(248, 113, 76, 0.1);
+    /* clip-path: polygon(0 0, 100% 0, 100% calc(100% - 50px), 0 100%); */
+    /* clip-path: polygon(0 50px, 100% 0, 100% 100%, 0 100%); */
     /* background: linear-gradient(160deg, #f8714c, #ffba6c); */
-    padding: 40px;
     /* clip-path: polygon(0 0, 0 0,0 100%, 100% 100%, 100% 50px); */
 }
 
@@ -308,26 +318,29 @@ header .navbar-nav .nav-item.dropdown .dropdown-menu li a span:hover {
     overflow: hidden;
 }
 .slider-track {
-    display: flex;
-    animation: scroll 20s linear 1s infinite;
+    width: 100%;
+    /* display: flex; */
+    /* animation: scroll 20s linear 1s infinite; */
 }
 .slider-track .card {
-    min-width: 300px;
+    /* min-width: 300px; */
+    width: 100%;
     margin: 0 1px;
     border: none;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease;
     overflow: hidden;
 }
-.slider-track .card:hover {
+/* .slider-track .card:hover {
     max-width: 360px;
 }
 .slider-track .card:not(:hover) {
     max-width: 300px;
-}
+} */
 .slider-track .card img {
-    height: 280px;
-    width: 400px;
+    /* height: 280px; */
+    /* width: 400px; */
+    width: 100%;
     object-fit: cover;
     transition: transform 0.3s ease;
 }  
@@ -354,10 +367,10 @@ header .navbar-nav .nav-item.dropdown .dropdown-menu li a span:hover {
     font-size: 1rem;
     /* color: #6c757d; */
 }
-.slider-track > div {
+/* .slider-track > div {
     display: flex;
-}
-@keyframes scroll {
+} */
+/* @keyframes scroll {
     0% {
         transform: translateX(0);
     }
@@ -365,9 +378,18 @@ header .navbar-nav .nav-item.dropdown .dropdown-menu li a span:hover {
         transform: translateX(calc(-100% + 300px));
         left: 0px;
     }
-}
+} */
 
 /* Recent actiities */
+.recent-activities { 
+    padding: 80px 0 80px 0;
+    /* background: rgb(248, 113, 76, 0.1); */
+    /* clip-path: polygon(0 50px, 100% 0, 100% 100%, 0 100%); */
+    /* clip-path: polygon(0 0, 100% 0, 100% calc(100% - 50px), 0 100%); */
+    /* background-image: url('../images/iith.jpg');
+    background-size: cover;
+    background-repeat: no-repeat; */
+}
 
 .gallery {
     display: grid;
@@ -388,7 +410,7 @@ header .navbar-nav .nav-item.dropdown .dropdown-menu li a span:hover {
 /* Image within gallery item */
 .gallery-item img {
     width: 100%;
-    height: auto;
+    /* height: 280px; */
     display: block;
     border-radius: 10px;
     transition: transform 0.3s ease;
@@ -434,11 +456,61 @@ header .navbar-nav .nav-item.dropdown .dropdown-menu li a span:hover {
 
 /* events-section */
 
-.events-section{
+{
     padding: 0px 80px;
 }
 
+/* upcoming events */
 
+.events-section .event-card {
+    border: 1px solid #dee2e6;
+    border-radius: 10px;
+    margin-bottom: 30px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease-in-out;
+}
+
+.event-card:hover {
+    transform: translateY(-5px);
+}
+
+.event-card img {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    max-height: 200px;
+    object-fit: cover;
+}
+
+.event-card .card-body {
+    padding: 20px;
+}
+
+.event-card h5 {
+    margin-bottom: 10px;
+    font-size: 1.25rem;
+}
+
+.event-card p {
+    color: #6c757d;
+    font-size: 0.9rem;
+    margin-bottom: 8px;
+}
+@media (max-width: 768px) {
+    .event-card {
+        margin-bottom: 20px;
+    }
+    .carousel-caption{
+        transform: translate(0%, 30%);
+    }
+    .carousel-caption p{
+        transform: translate(0%, -5%);
+    }
+    footer .em-txt{
+        display: inline;
+        color: #fff;
+        font-size: 0.75rem;
+    }
+}
 
 /* Footer */
 footer {
@@ -567,7 +639,7 @@ footer .navbar-brand img{
     text-align: center;
     font-size: 1.75rem;
     font-weight: 700;
-    margin-bottom: 18px;
+    margin-bottom: 28px;
 }
 
 .heading span {
@@ -694,4 +766,351 @@ footer .navbar-brand img{
     to {
       transform: rotate(360deg);
     }
+  }
+
+
+/* profile */
+
+.profile {
+    display: flex;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+.profile img {
+    width: 200px;
+    height: auto;
+    object-fit: cover;
+}
+
+.info {
+    padding: 20px;
+}
+
+.info h2 {
+    margin-top: 0;
+    margin-bottom: 10px;
+}
+
+/* Faculty Profile */
+
+.faculty-profile-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    position: relative;
+    min-height: 100vh;
+}
+
+.faculty-profile-card {
+    position: relative;
+    background: #fff;
+    max-width: 320px;
+    margin: 15px;
+    text-align: center;
+    overflow: hidden;
+    border: 1px solid #dee2e6;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease-in-out;
+}
+
+.faculty-profile-card img {
+    width: 100%;
+    height: 280px;
+    object-fit: cover;
+}
+
+.faculty-profile-card .card-title {
+    width: 80%;
+    /* color: #f8714c; */
+    background: #ffffff;
+    padding: 10px 15px;
+    border: 2px solid #fff;
+    border-radius: 10px;
+    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.2);
+    position: absolute;
+    top: 260px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
+    font-size: 1.1rem;
+    font-weight: 600;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.faculty-profile-card .card-body {
+    padding: 20px;
+    padding-top: 80px;
+}
+
+.designation{
+    color: #f8714c;
+}
+
+.faculty-profile-card .social-icons {
+    margin-top: 10px;
+    border-top: 2px solid #f8714c;
+    text-align: start;
+    padding: 5px 2px;
+}
+
+.faculty-profile-card .social-icons a {
+    color: #555;
+    margin: 0 10px;
+    font-size: 1rem;
+    text-decoration: none;
+    transition: color 0.2s;
+}
+
+.faculty-profile-card .social-icons a:hover {
+    color: #f8714c;
+}
+
+@media (max-width: 600px) {
+    .profile {
+        flex-direction: column;
+    }
+
+    .profile img {
+        width: 100%;
+    }
+}
+
+
+
+
+.pro-head {
+    transform: translateY(-5px);
+    /* background: #f8714c; */
+    background: linear-gradient(to left top, #804cf8, #f8714c);
+    color: #f1f1f1;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+}
+
+.program-title {
+    font-size: 1rem;
+    margin-bottom: 20px;
+}
+
+.program-btn {
+    /* background-color: #f8714c; */
+    color: #804cf8;
+    /* color: #fff; */
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.program-btn:hover {
+    background-color: rgba(255, 255, 255, 0.9);
+    color: #f8714c;
+    border: none;
+}
+
+
+/* upcoming events */
+
+.event-card {
+    border: 1px solid #dee2e6;
+    border-radius: 10px;
+    margin-bottom: 30px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease-in-out;
+}
+
+.event-card:hover {
+    transform: translateY(-5px);
+}
+
+.event-card img {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    max-height: 200px;
+    object-fit: cover;
+}
+
+.event-card .card-body {
+    padding: 20px;
+}
+
+.event-card h5 {
+    margin-bottom: 10px;
+    font-size: 1.25rem;
+}
+
+.event-card p {
+    color: #6c757d;
+    font-size: 0.9rem;
+    margin-bottom: 8px;
+}
+
+.google-calendar-btn {
+    background-color: #4285f4;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.google-calendar-btn:hover {
+    background-color: #357ae8;
+}
+
+@media (max-width: 768px) {
+    .event-card {
+        margin-bottom: 20px;
+    }
+    .carousel-caption{
+        transform: translate(0%, 30%);
+    }
+    .carousel-caption p{
+        transform: translate(0%, -5%);
+    }
+    footer .em-txt{
+        display: inline;
+        color: #fff;
+        font-size: 0.75rem;
+    }
+}
+
+
+.program-details {
+    /* border: 1px solid #ced4da; */
+    /* border-radius: 10px; */
+    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
+    background-color: #fff;
+    /* padding: 30px; */
+    margin-top: 50px;
+}
+.program-details h2, .program-details h4 {
+    color: #343a40;
+    text-align: center;
+    margin-bottom: 30px;
+}
+.program-details p {
+    font-size: 16px;
+    line-height: 1.6;
+}
+.program-details ul {
+    list-style-type: disc;
+    margin-left: 20px;
+}
+.course-table {
+    margin-top: 30px;
+}
+.course-table th, .course-table td {
+    padding: 10px 15px;
+    vertical-align: middle;
+}
+.btn-download {
+    display: block;
+    width: 100%;
+    max-width: 200px;
+    margin: 30px auto 0;
+}
+.btn-download:hover {
+    background-color: #007bff;
+    border-color: #007bff;
+}
+
+/* loading overlay */
+.loading-overlay{
+    position: fixed;
+  display: none;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(255, 255, 255, 0.9);
+  z-index: 2;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.section-title {
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.activities-section {
+    padding: 80px 0;
+}
+
+.btn-primary{
+    padding: 10px;
+    color: #f8714c;
+    background: transparent;
+    border: 2px solid #f8714c;
+    border-radius: 20px;
+}
+
+.btn-primary:hover{
+    color: #f1f1f1;
+    background: #f8714c;
+    border: 2px solid #f8714c;
+}
+
+.btn-primary:active{
+    color: #f1f1f1;
+    background-color: #f8714c;
+    border: 2px solid #f8714c;
+}
+
+
+/* Background Animation */
+ .animated-background1 {
+    position: absolute;
+    width: 120px;
+    height: 120px;
+    left: auto;
+    right: 100px;
+    bottom: 400px;
+    background-color:transparent;
+    background-image: radial-gradient(circle, #f8714c 10%, transparent 12%);
+    background-size: 20px 20px;
+    animation: rotate-bg 120s linear infinite;
+  }
+
+  .animated-background2 {
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    top: 200px;
+    left: 200px;
+    right: auto;
+    background-color:transparent;
+    background-image: radial-gradient(circle, #f8714c 10%, transparent 12%);
+    background-size: 20px 20px;
+    animation: rotate-bg 120s linear infinite;
+  }
+
+  @keyframes rotate-bg {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  }
+
+  form {
+    position: absolute;
+    left: auto;
+    right: 50px;
+  }
+  form select {
+    border: none;
+    border-bottom: 2px solid #eee;
+    padding: 10px;
   }
