--- a/css/styles.css
+++ b/css/styles.css
@@ -193,7 +193,7 @@ header .navbar-nav .nav-item.dropdown .dropdown-menu li a span:hover {
 .news-section {
     position: relative;
     width: 100%;
-    padding: 80px 0 80px 0;
+    padding: 40px 0 40px 0;
 }
 
 .events-row {
@@ -304,12 +304,28 @@ header .navbar-nav .nav-item.dropdown .dropdown-menu li a span:hover {
 
 /* Acheivement Section */
 .achievements-section{
-    padding: 40px 0 80px 0;
-    background: rgb(248, 113, 76, 0.1);
+    padding: 40px 0 40px 0;
+    /* background: rgb(248, 113, 76, 0.1); */
+
     /* clip-path: polygon(0 0, 100% 0, 100% calc(100% - 50px), 0 100%); */
     /* clip-path: polygon(0 50px, 100% 0, 100% 100%, 0 100%); */
     /* background: linear-gradient(160deg, #f8714c, #ffba6c); */
     /* clip-path: polygon(0 0, 0 0,0 100%, 100% 100%, 100% 50px); */
+}
+.achievements-section .carousel .carousel-inner {
+    padding: 80px 40px;
+    background: rgb(248, 113, 76, 0.1);
+    border-radius: 20px;
+}
+
+.achievements-section .card img {
+    width: 100%;
+    object-fit: cover;
+    transition: transform 0.3s ease;
+}
+
+.achievements-section .card-title {
+    color: #f8714c;
 }
 
 .slider-container {
@@ -320,16 +336,20 @@ header .navbar-nav .nav-item.dropdown .dropdown-menu li a span:hover {
 .slider-track {
     width: 100%;
     /* display: flex; */
+    /* justify-content: center; */
     /* animation: scroll 20s linear 1s infinite; */
 }
 .slider-track .card {
-    /* min-width: 300px; */
+    background: transparent;
     width: 100%;
-    margin: 0 1px;
+    /* margin: 0 auto; */
     border: none;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1); */
     transition: transform 0.3s ease;
     overflow: hidden;
+}
+.slider-track .card-body {
+    max-width: 600px;
 }
 /* .slider-track .card:hover {
     max-width: 360px;
@@ -338,11 +358,11 @@ header .navbar-nav .nav-item.dropdown .dropdown-menu li a span:hover {
     max-width: 300px;
 } */
 .slider-track .card img {
-    /* height: 280px; */
-    /* width: 400px; */
     width: 100%;
+    height: 280px;
     object-fit: cover;
     transition: transform 0.3s ease;
+    border-radius: 20px;
 }  
 .slider-track .card:hover img {
     transform: scale(1.1);
@@ -360,12 +380,12 @@ header .navbar-nav .nav-item.dropdown .dropdown-menu li a span:hover {
 }
 .slider-track .card-title {
     color: #f8714c;
-    font-size: 1.25rem;
+    font-size: 24px;
     font-weight: bold;
 }
 .slider-track .card-text {
-    font-size: 1rem;
-    /* color: #6c757d; */
+    font-size: 18px;
+    color: #6c757d;
 }
 /* .slider-track > div {
     display: flex;
@@ -382,7 +402,7 @@ header .navbar-nav .nav-item.dropdown .dropdown-menu li a span:hover {
 
 /* Recent actiities */
 .recent-activities { 
-    padding: 80px 0 80px 0;
+    padding: 40px 0 40px 0;
     /* background: rgb(248, 113, 76, 0.1); */
     /* clip-path: polygon(0 50px, 100% 0, 100% 100%, 0 100%); */
     /* clip-path: polygon(0 0, 100% 0, 100% calc(100% - 50px), 0 100%); */
@@ -455,10 +475,6 @@ header .navbar-nav .nav-item.dropdown .dropdown-menu li a span:hover {
 }
 
 /* events-section */
-
-{
-    padding: 0px 80px;
-}
 
 /* upcoming events */
 
